<resources>
    <string name="app_name">Bookstore</string>

    <!-- MainActivity -->
    <string name="books">Books</string>
    <string name="authors">Authors</string>
    <string name="comments">Comments</string>
    <string name="emptyBooks">There is no books on your search</string>
    <string name="emptyAuthors">There is no authors on your search</string>
    <string name="emptyComments">There is no comments on the books searched</string>

    <!-- BookDetailActivity -->
    <string name="author">Author</string>
    <string name="published">Published</string>
    <string name="pages">Pages</string>
    <string name="description">Description</string>
    <string name="book_image">Book image</string>

    <!-- AuthorDetailActivity -->
    <string name="his_books">His books</string>
    <string name="author_image">Author image</string>

    <!-- CommentFragment -->
    <string name="from">From:</string>
    <string name="about">About:</string>
    <string name="his_review">His review:</string>

    <!-- Libraries -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
