<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:layout_width="230dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            style="?android:attr/ratingBarStyleSmall"
            android:progressDrawable="@drawable/ratingbar_stars"
            android:numStars="5"
            android:stepSize="1.0"
            android:rating="2.0" />

        <RelativeLayout
            android:id="@+id/user_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/item_comment_user_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/item_comment_user"
                android:layout_toRightOf="@id/item_comment_user_label"
                android:layout_toEndOf="@+id/item_comment_user_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/book_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/item_comment_book_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/item_comment_book"
                android:layout_toRightOf="@id/item_comment_book_label"
                android:layout_toEndOf="@id/item_comment_book_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/comment_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/item_comment_content_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/his_review"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/item_comment_content"
                android:layout_toRightOf="@id/item_comment_content_label"
                android:layout_toEndOf="@id/item_comment_content_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>